<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_product"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/p_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/enter_product_name"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/p_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_product_description"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/p_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_product_price"
        android:minHeight="48dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update_product"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_product_button"
        android:textStyle="bold" />


</LinearLayout>