<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=""
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:id="@+id/ll1"
        android:padding="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_product"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <EditText
            android:id="@+id/p_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/enter_product_name"
            android:minHeight="48dp"
             />

        <EditText
            android:id="@+id/p_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_product_description"
            android:minHeight="48dp"
            />

        <EditText
            android:id="@+id/p_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_product_price"
            android:minHeight="48dp"
             />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:layout_below="@+id/ll1"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_add_product"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/view_products"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_view_product"/>

    </LinearLayout>

</RelativeLayout>