<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row_name"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/row_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row_descr"
            android:text="@string/row_descr"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row_price"
            android:text="@string/row_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:text="@string/btn_update"
            android:backgroundTint="@color/teal_700" />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:text="@string/btn_delete"
            android:backgroundTint="@color/design_default_color_error" />
    </LinearLayout>

</LinearLayout>


